--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "gspread>=6.2.0",
     "loguru>=0.7.3",
     "pydantic>=2.10.6",
+    "pytest>=8.3.5",
     "python-dotenv>=1.0.1",
 ]
