--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "mypy>=1.15.0",
     "pydantic>=2.10.6",
     "pytest>=8.3.5",
+    "pytest-cov>=6.0.0",
     "python-dotenv>=1.0.1",
+    "telebot>=0.0.5",
 ]
 
 [tool.black]
