--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     restart: unless-stopped
     environment:
       - PYTHONUNBUFFERED=1
-    command: ["python", "main.py"]
+    command: ["uv","run","python", "main.py"]
