--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "parsing"
 version = "0.1.0"
-description = "Add your description here"
+description = "Python scrapper by drissionpage"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
@@ -9,7 +9,6 @@ dependencies = [
     "gspread>=6.2.0",
     "loguru>=0.7.3",
     "mypy>=1.15.0",
-    "pydantic>=2.10.6",
     "pytest>=8.3.5",
     "pytest-cov>=6.0.0",
     "python-dotenv>=1.0.1",
@@ -18,5 +17,5 @@ dependencies = [
 
 [tool.black]
 line-length = 79  # Ограничение длины строки (PEP 8)
-target-version = ['py311', 'py312']  # Версия Python
+target-version = ['py312', 'py313']  # Версия Python
 skip-magic-trailing-comma = true  # Отключает автоматический перенос при длинных списках
